# codex-switcher

./: .gitignore  README.md  pyproject.toml
codex_switch/: __init__.py  auth.py  cli.py  service.py  store.py  usage.py
tests/: test_cli.py
